[SimulinkAdapterReconfiguration] Rename plugins using refactoring

--- a/org.muml.simulink.adapter.reconfiguration.m2m/.project
+++ b/org.muml.simulink.adapter.reconfiguration.m2m/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.uni_paderborn.fujaba.simulink.reconfiguration.m2m</name>
+	<name>org.muml.simulink.adapter.reconfiguration.m2m</name>
 	<comment></comment>
 	<projects>
 	</projects>
