--- a/org.muml.simulink.adapter.reconfiguration.analysis/.project
+++ b/org.muml.simulink.adapter.reconfiguration.analysis/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.uni_paderborn.fujaba.simulink.reconfiguration.analysis</name>
+	<name>org.muml.simulink.adapter.reconfiguration.analysis</name>
 	<comment></comment>
 	<projects>
 	</projects>
