--- a/org.muml.simulink.adapter.reconfiguration.wizard/.project
+++ b/org.muml.simulink.adapter.reconfiguration.wizard/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>de.uni_paderborn.fujaba.simulink.reconfiguration.wizard</name>
+	<name>org.muml.simulink.adapter.reconfiguration.wizard</name>
 	<comment></comment>
 	<projects>
 	</projects>
